--- a/webpage/src/components/home.css
+++ b/webpage/src/components/home.css
@@ -1,9 +1,10 @@
 .homepage{
-    justify-content: center;
-    text-align: center;
     font-size: 40px;
+    text-align: center;
+    align-items: center;
 }
 p{
-    margin: 20px 20px ;
+    margin: 20px 200px;
     font-size: 20px;
+    line-height: 1.5;
 }
