--- a/webpage/src/index.css
+++ b/webpage/src/index.css
@@ -21,3 +21,7 @@ body {
     50% { background-position: 100% 50%; }
     100% { background-position: 0% 50%; }
 }
+img {
+  max-width: 100%; 
+  height: auto;   
+}
