--- a/webpage/src/components/projects.css
+++ b/webpage/src/components/projects.css
@@ -26,10 +26,10 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-
-    width: 500px;
-    height: 500px;
-    padding: 40px;
+    flex: 1 1 300px;
+    max-width: 400px;
+    min-width: 280px;
+    padding: 30px;
 
     background-color:  transparent;
     border-radius: 40px;
